# better-edit-tools-mcp

./: .gitignore  AGENTS.md  Cargo.toml  README.md  README.zh.md  better-edit-tools  go.mod
.github/ISSUE_TEMPLATE/: docs-talk.yml
.github/script/: betools  main.go  package-release.go  release-notes.go
.github/workflows/: build.yml  docs.yml
.sisyphus/run-continuation/: ses_1cbd36278ffeM5jRBFQx3okaTL.json
cmd/better-edit-tools/: main.go
docs/: decisions.zh.md  hugo.toml  llm-setup-guide.md  llm-setup-guide.zh.md
docs/content/: _index.en.md  _index.zh.md  cli.en.md  cli.zh.md  decisions.en.md  decisions.zh.md  llm-setup-guide.en.md  llm-setup-guide.zh.md
docs/go-api/: README.md  README.zh.md
docs/i18n/: en.yaml  zh.yaml
docs/layouts/: index.llms.txt
docs/scripts/: copy-md-sources.go
internal/app/: cli.go  lang.go  tool.go  tool_test.go
internal/edit/: balance.go  chip.go  core.go  diff.go  edit_test.go  error.go  func_range.go  ops.go  tag_range.go  target.go  types.go  write.go  write_edge_test.go
internal/server/: server.go  server_test.go
pkg/betools/: balance.go  chip.go  core.go  core_atomic_test.go  coverage_gap_test.go  diff.go  doc.go  edit_test.go  error.go  fs.go  func_range.go  id.go  memfs.go  memfs_test.go  ops.go  parse_file_range.go  parse_file_range_test.go  regression_test.go  session.go  snapshot.go  tag_range.go  target.go  target_test.go  testhelper_test.go  types.go  write.go  write_edge_test.go
pkg/fs/: fs.go  (+4 more)
scripts/: install.sh
src/: cli.rs  error.rs  fast_edit.rs  lang.rs  main.rs  server.rs  structure_balance.rs
(+22 files in other folders)
