[package]
name = "better-edit-tools"
version = "0.1.0"
edition = "2024"
description = "MCP server: better-edit-tools (balance, show, replace, insert, delete, batch, function-range)"

[dependencies]
rmcp = { version = "1.6", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = { version = "0.8", features = ["derive"] }
anyhow = "1"
