[package]
name = "better-edit-tools"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "高性能 MCP 文件编辑工具集：原子写入、批量编辑智能排序、函数范围自动检测"

[dependencies]
rmcp = { version = "1.6", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = { version = "0.8", features = ["derive"] }
thiserror = "2"
